Fix svg clipping on safari

--- a/src/components/NavBar/IconButton/IconButton.module.css
+++ b/src/components/NavBar/IconButton/IconButton.module.css
@@ -1,6 +1,7 @@
 .icon {
   width: 24px;
   height: 24px;
+  padding: 0;
   background-color: transparent;
   background-size: contain;
   background-repeat: no-repeat;
